Create  CRUD with security add MVC add service update configs

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,12 @@
 <body>
 <h1>Welcome to Index PAGE!</h1>
 
+<div>
+    <a href="http://localhost:8080/login" target="_blank">Login</a>
+    <a href="registration">Registration</a>
+</div>
+
+
 
 </body>
 </html>
