--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,11 +1,40 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Spring Security Example</title>
+    <title>User page</title>
+</head>
+<style>
+    table, th, td {
+        border: 1px solid black;
+    }
+</style>
 </head>
 <body>
-<h1>User, welcome spring boot security page!</h1>
+<h1>Welcome <a th:text="${user.getUsername().toUpperCase()}"/>,
+    this is you're personal page!</h1>
 
+<table>
+    <thead>
+    <tr>
+        <th>Id</th>
+        <th>Name</th>
+        <th>Password</th>
+        <th>Email</th>
+
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="user : ${user}">
+        <td th:text="${user.getId()}"></td>
+        <td th:text="${user.getUsername()}"></td>
+        <td th:text="${user.getPassword()}"></td>
+        <td th:text="${user.getEmail()}"></td>
+
+    </tr>
+    </tbody>
+</table>
+
+<a href="/logout">Logout</a>
 
 </body>
 </html>
