--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,40 +1,114 @@
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">-->
+<!--<head>-->
+<!--    <title>User page</title>-->
+<!--</head>-->
+<!--<style>-->
+<!--    table, th, td {-->
+<!--        border: 1px solid black;-->
+<!--    }-->
+<!--</style>-->
+<!--</head>-->
+<!--<body>-->
+<!--<h1>Welcome <a th:text="${user.getUsername().toUpperCase()}"/>,-->
+<!--    this is you're personal page!</h1>-->
+
+<!--<table>-->
+<!--    <thead>-->
+<!--    <tr>-->
+<!--        <th>Id</th>-->
+<!--        <th>Name</th>-->
+<!--        <th>Password</th>-->
+<!--        <th>Email</th>-->
+
+<!--    </tr>-->
+<!--    </thead>-->
+<!--    <tbody>-->
+<!--    <tr th:each="user : ${user}">-->
+<!--        <td th:text="${user.getId()}"></td>-->
+<!--        <td th:text="${user.getUsername()}"></td>-->
+<!--        <td th:text="${user.getPassword()}"></td>-->
+<!--        <td th:text="${user.getEmail()}"></td>-->
+
+<!--    </tr>-->
+<!--    </tbody>-->
+<!--</table>-->
+
+<!--<a href="/logout">Logout</a>-->
+
+<!--</body>-->
+<!--</html>-->
+
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3"
+      layout:decorator="layout">
+
 <head>
-    <title>User page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8">
+    <title>User Home</title>
 </head>
-<style>
-    table, th, td {
-        border: 1px solid black;
-    }
-</style>
-</head>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <body>
-<h1>Welcome <a th:text="${user.getUsername().toUpperCase()}"/>,
-    this is you're personal page!</h1>
+<div class="row text-white bg-dark">
+    <div class="col d-flex justify-content-between align-items-center">
+        <div sec:authorize="isFullyAuthenticated()">
+            <h4 style="margin-left: 30px;"><b><span th:text="${user.getEmail()}"></span></b>  with roles <span
+                    th:text="${user.getRole()}"></span> </h4>
+        </div>
+        <div class="col-1 ml-auto">
+            <div sec:authorize="isAuthenticated()">
+                <a class="nav-link" href="/logout">Logout</a>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container-fluid">
+    <div class="row" style="height: 100vh;">
+        <div class="col-2">
 
-<table>
-    <thead>
-    <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Password</th>
-        <th>Email</th>
+            <ul class="nav flex-column">
+                <li class="nav-item bg-primary mt-2">
+                    <a class="nav-link" style="color: white;" th:href="@{/user}">User</a>
+                </li>
 
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="user : ${user}">
-        <td th:text="${user.getId()}"></td>
-        <td th:text="${user.getUsername()}"></td>
-        <td th:text="${user.getPassword()}"></td>
-        <td th:text="${user.getEmail()}"></td>
+            </ul>
+        </div>
+        <div class="col-10 bg-light">
+            <h1><b>User information-page</b></h1>
+            <div class="col bg-white"><h3>About user</h3></div>
+            <div class="col p-3" style="background-color: white;">
+                <table class="table table-striped">
+                    <thead>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Email</th>
+                    <th>Password</th>
+                    <th>Role</th>
+                    </thead>
+                    <tbody>
+                    <tr th:each ="user: ${user}">
+                        <td th:text="${user.getId()}"></td>
+                        <td th:text="${user.getUsername()}"></td>
+                        <td th:text="${user.getEmail()}"></td>
+                        <td th:text="${user.getPassword()}"></td>
+                        <td
+                                th:text="${user.getRole()}">...
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
 
-    </tr>
-    </tbody>
-</table>
-
-<a href="/logout">Logout</a>
-
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
