--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -1,31 +1,34 @@
 <div class="modal-header">
-    <h5 class="modal-title" id="editTitle">Edit user</h5>
+    <h5 class="modal-title" id="deleterTitle">Delete user</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
 </div>
 <div class="modal-body">
-    <form class="col" action="#" th:action="@{/update}" th:object="${user}" method="post">
+    <form class="col" action="#" th:action="@{/delete}" th:object="${user}" method="post">
         <div style="text-align: center;" class="col-8 mx-auto">
             <div class="form-group row">
                 <label class="col col-form-label" for="id"><strong>Id</strong></label>
                 <input class="form-control-plaintext border" type="text" th:field="*{id}" id="id" placeholder="string" readonly="readonly"/>
             </div>
             <div class="form-group row">
-                <label class="col col-form-label" for="username"><strong>User name</strong></label>
-                <input class="form-control-plaintext border" type="text" th:field="*{username}" id="username" placeholder="string"/>
+                <label class="col col-form-label" for="username"><strong>First name</strong></label>
+                <input class="form-control-plaintext border" type="text" th:field="*{username}"
+                      id="username" placeholder="string" readonly="readonly" />
             </div>
             <div class="form-group row">
                 <label class="col col-form-label" for="email"><strong>Email</strong></label>
-                <input class="form-control-plaintext border" type="text" th:field="*{email}" id="email" placeholder="string"/>
+                <input class="form-control-plaintext border" type="text" th:field="*{email}" id="email"
+                       placeholder="string" readonly="readonly"/>
             </div>
             <div class="form-group row">
-                <label class="col col-form-label" for="password">Password</label>
-                <input class="form-control" type="text" th:field="*{password}" id="password" placeholder="string"/>
+                <label class="col col-form-label" for="password"><strong>Password</strong></label>
+                <input class="form-control-plaintext border" type="text" th:field="*{password}" id="password"
+                       placeholder="string" readonly="readonly"/>
             </div>
             <div class="form-group row">
                 <label class="col col-form-label" for="roles"><strong>Role</strong></label>
-                <select th:field="*{role}" multiple class="custom-select" id="roles">
+                <select th:field="*{role}" multiple class="custom-select" id="roles" readonly="readonly">
                     <option th:each="role : ${roles}"
                             th:text="${role.getTitle()}"
                             th:value="${role.getId()}">
@@ -34,7 +37,7 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button class="btn btn-success" name="action" type="submit" value="save">Edit</button>
+            <button class="btn btn-danger" name="action" type="submit" value="save">Delete</button>
         </div>
     </form>
 </div>
