--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -110,7 +110,7 @@
     </div>
 </div>
 
- modal placeholder
+<!-- modal placeholder-->
 <div id='myModal' class='modal fade in' tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
         <div class="modal-content" style="overflow-y: auto;">
